Fri May 01 01:38:08 GMT 2015  Olly Betts <olly@survex.com>

	* INSTALL: IRIX is past EOL so drop information about IRIX make.

Thu Apr 30 05:08:13 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: Add common/stringutils.cc to urlenctest_SOURCES, needed
	  now urldecode.h uses C_isxdigit().

Thu Apr 30 02:56:08 GMT 2015  Olly Betts <olly@survex.com>

	* configfile.cc,htmlparse.cc,myhtmlparse.cc,omega.cc,omindex.cc,
	  query.cc,scriptindex.cc,urldecode.h: Consistently use C_isupper(),
	  C_toupper(), etc as these versions aren't affected by the locale
	  setting, and also allow signed char values (so we don't need to
	  cast the argument to unsigned char).

Wed Apr 15 01:12:33 GMT 2015  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst,docs/omegascript.rst,omega.cc,query.cc: Fix
	  handling of multiple P.<prefix> fields - previously only the first
	  seen was used.  These fields are also now taken into account when
	  deciding if the query has changed.  $query now returns an
	  OmegaScript list with one entry for each CGI parameter passed.

Wed Apr 15 01:11:08 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: Fix setting setting of prefix map for P - in 1.3.2,
	  this would failed to also search in the subject.  Now it also
	  searches in the subject and topic.

Wed Apr 15 01:09:29 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: When listing matching terms, don't make the commas
	  italic.

Wed Mar 11 12:18:31 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: Note that one should ensure that Omega gets sent
	  form submissions encoded in UTF-8.

Wed Mar 11 11:28:31 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: Discuss encodings of filenames (see #550).

Wed Mar 11 11:07:29 GMT 2015  Olly Betts <olly@survex.com>

	* urldecode.h,urlenctest.cc: $prettyurl now decodes valid UTF-8
	  sequences.  Fixes #550 and #644, reported by catkin and terencz.

Mon Mar 09 12:31:44 GMT 2015  Olly Betts <olly@survex.com>
